--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,3 +19,5 @@ jobs:
       run: ./text2table tests/in/test1.txt out.txt && cmp out.txt tests/out/test1.txt
     - name: Linter
       run: clang-tidy ttt.cpp
+    - name: Linter (alt)
+      uses: amcp-pit/cpp-linter@v1
