--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Build
       run: clang++ ttt.cpp -o text2table
     - name: Test
-      run: ./text2table tests/in/test1.txt out.txt && cmp out.txt tests/out/test1.txt
-    - name: Linter
-      run: clang-tidy ttt.cpp
+      run: ./test
+    #- name: Linter
+     # run: clang-tidy ttt.cpp
     - name: Linter (alt)
       uses: amcp-pit/cpp-linter@v1
